# daily-bevy

./: Cargo.toml  README.md  example.html  script.sh  watch.sh
assets/scenes/: load_scene_example.scn.ron
src/: main.rs
