[package]
name = "daily-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_pkv = { git = "https://github.com/johanhelsing/bevy_pkv" }
serde = "1.0.196"

[workspace.lints.clippy]
type_complexity = "allow"

[lints]
workspace = true
